--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -10,3 +10,70 @@ body {
   overflow-x: hidden;
   font-size: 62.5%;
 }
+
+h1 {
+  font-size: 3.2rem; /* 32px */
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 2.4rem; /* 24px */
+  line-height: 1.3;
+}
+
+h3 {
+  font-size: 2rem; /* 20px */
+  line-height: 1.4;
+}
+
+h4 {
+  font-size: 1.8rem; /* 18px */
+  line-height: 1.5;
+}
+
+h5 {
+  font-size: 1.6rem; /* 16px */
+  line-height: 1.6;
+}
+
+h6 {
+  font-size: 1.4rem; /* 14px */
+  line-height: 1.6;
+}
+
+p {
+  font-size: 1.6rem; /* 16px */
+  line-height: 1.5;
+}
+
+small {
+  font-size: 1.4rem; /* 14px */
+  line-height: 1.5;
+}
+
+blockquote {
+  font-size: 1.8rem; /* 18px */
+  line-height: 1.5;
+  font-style: italic;
+}
+
+li {
+  font-size: 1.6rem; /* 16px */
+  line-height: 1.5;
+}
+
+caption,
+label {
+  font-size: 1.4rem; /* 14px */
+  line-height: 1.5;
+}
+
+input,
+textarea {
+  font-size: 1.6rem; /* 16px */
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+}
